<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/background_app"
    android:padding="0dp">

    <!-- Toolbar para el nombre de la aplicación y el menú de opciones -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#39c5bb"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Nombre de la aplicación -->
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizcraft"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="16dp"
        >

    <!-- Contenedor del formulario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="#283838"
        android:padding="16dp"
        android:elevation="4dp">

        <!-- Título del formulario -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#39c5bb"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"/>

        <!-- Campo de texto para el área del request -->
        <EditText
            android:id="@+id/request_field"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/data_login"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="#e0e0e0"
            android:textSize="14sp"/>

        <!-- Botón para enviar el formulario -->
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2f9c95"
            android:text="@string/send"
            android:textColor="#a1f4f0"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:elevation="2dp"/>
    </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
